[gd_scene load_steps=6 format=3 uid="uid://bshu8w0haitut"]

[ext_resource type="Script" path="res://Data/Player/Tools/Laser.gd" id="1_o4khl"]
[ext_resource type="Texture2D" uid="uid://c6ngxn2f8etkv" path="res://Assets/Tools/Laser/lasermk1.png" id="2_fu11g"]
[ext_resource type="Texture2D" uid="uid://bjffx141lft5p" path="res://Assets/2d_lights_and_shadows_neutral_point_light.webp" id="3_h2geb"]

[sub_resource type="Curve" id="Curve_0k6xh"]
_data = [Vector2(0.0375, 0.915789), 0.0, 0.0, 0, 0, Vector2(0.55625, 0.284211), 0.0, 0.0, 0, 0, Vector2(1, 0.915789), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_25auq"]
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.547009, 1)
colors = PackedColorArray(0.880605, 0.99, 0.8613, 1, 0.24, 1, 0.05, 1, 0, 0.67451, 0.0980392, 1)

[node name="Laser" type="Node2D"]
script = ExtResource("1_o4khl")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 45
texture_filter = 1
position = Vector2(28, 0)
texture = ExtResource("2_fu11g")

[node name="output_point_light" type="PointLight2D" parent="Sprite"]
visible = false
position = Vector2(2, -1)
color = Color(0.866667, 0.992157, 0.843137, 1)
texture = ExtResource("3_h2geb")
texture_scale = 0.1

[node name="LaserOutput" type="Marker2D" parent="Sprite"]
position = Vector2(0, -0.5)

[node name="contact_point_light" type="PointLight2D" parent="Sprite/LaserOutput"]
visible = false
position = Vector2(2, -0.5)
color = Color(0, 0.67451, 0.0980392, 1)
texture = ExtResource("3_h2geb")
texture_scale = 0.1

[node name="Line2D" type="Line2D" parent="Sprite/LaserOutput"]
z_index = -1
position = Vector2(0, -0.5)
points = PackedVector2Array(0, 0, 100, 0, 200, 0)
width = 3.5
width_curve = SubResource("Curve_0k6xh")
gradient = SubResource("Gradient_25auq")

[node name="RayCast2D" type="RayCast2D" parent="Sprite/LaserOutput"]
visible = false
target_position = Vector2(200, 0)
collision_mask = 2
hit_from_inside = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Overheat" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Overheat" to="." method="_on_overheat_timeout"]
